# discoverysamplers

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: tests.yml
data/20nHz_-13.5_wn_ds_noTM_feathers/: J0030+0451  J0613-0200  J0751+1807  J0900-3144  J1012+5307  J1022+1001  J1024-0719  J1455-3330  J1600-3053  J1640+2224  J1713+0747  J1730-2304  J1738+0333  J1744-1134  J1751-2857  J1801-1417  J1804-2717  J1843-1113  J1857+0943  J1909-3744  J1910+1256  J1911+1347  J1918-0642  J2124-3358  J2322+2057
data/5nHzet_wn_ds_feathers/: J0030+0451  J0613-0200  J0751+1807  J0900-3144  J1012+5307  J1022+1001  J1024-0719  J1455-3330  J1600-3053  J1640+2224  J1713+0747  J1730-2304  J1738+0333  J1744-1134  J1751-2857  J1801-1417  J1804-2717  J1843-1113  J1857+0943  J1909-3744  J1910+1256  J1911+1347  J1918-0642  J2124-3358  J2322+2057
data/5nHzet_wn_ds_noTM_feathers/: J0030+0451  J0613-0200  J0751+1807  J0900-3144  J1012+5307  J1022+1001  J1024-0719  J1455-3330  J1600-3053  J1640+2224  J1713+0747  J1730-2304  J1738+0333  J1744-1134  J1751-2857  J1801-1417  J1804-2717  J1843-1113  J1857+0943  J1909-3744  J1910+1256  J1911+1347  J1918-0642  J2124-3358  J2322+2057
data/DR2new_5nHzet_feathers/: J0030+0451  J0613-0200  J0751+1807  J0900-3144  J1012+5307  J1022+1001  J1024-0719  J1455-3330  J1600-3053  J1640+2224  J1713+0747  J1730-2304  J1738+0333  J1744-1134  J1751-2857  J1801-1417  J1804-2717  J1843-1113  J1857+0943  J1909-3744  J1910+1256  J1911+1347  J1918-0642  J2124-3358  J2322+2057
docs/: requirements.txt
docs/source/: acknowledgements.rst  conf.py  index.rst
docs/source/advanced/: custom_priors.rst  extending.rst  parallel_tempering.rst  performance.rst  (+1 more)
examples/: RJ_MCMC.ipynb  eryn_example.ipynb  nessai_example.ipynb  quick_start_guide.ipynb  quick_start_guide.py
src/discoverysamplers/: __init__.py  blackjax_interface.py  eryn_RJ_interface.py  eryn_interface.py  gpry_interface.py  jaxns_interface.py  likelihood.py  moves.py  nessai_interface.py  plots.py  priors.py
src/discoverysamplers.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  cw_simulation_test.ipynb  cw_single_source_nessai.ipynb  cw_with_PT.ipynb  test_blackjax_gpu.ipynb  test_eryn_interface.ipynb  test_gpry_interface.ipynb  test_nessai_interface.ipynb
tests/unit/: __init__.py  test_blackjax_interface.py  test_plotting.py  test_return_methods.py
(+18 files in other folders)
