[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discoverysamplers"
version = "0.1.0"
description = "A set of interfaces from Discoery to samplers"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Jonas El Gammal", email = "jonas.el.gammal@rwth-aachen.de" }]

# Keep dependencies minimal; add Discovery as an optional extra (see below)
dependencies = [] # TODO

# [project.optional-dependencies]
# Install Discovery from Git when you want a one-shot setup:
# pip install .[discovery]
# discovery = [
#   "discovery @ git+https://github.com/nanograv/discovery.git@main"
# ]
# May use this later

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
