[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discoverysamplers"
version = "0.1.0"
description = "A set of interfaces from Discoery to samplers"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Jonas El Gammal", email = "jonas.el.gammal@rwth-aachen.de" }]

# Keep dependencies minimal; add Discovery as an optional extra (see below)
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
# Documentation dependencies
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "sphinx-autodoc-typehints>=1.24",
    "myst-parser>=2.0",
    "sphinxcontrib-napoleon>=0.7",
    "nbsphinx>=0.9",
    "ipython>=8.0",
]

# Development dependencies
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

# All samplers
all = [
    "eryn>=1.2",
    "nessai",
    "jaxns",
    "gpry",
    "cobaya",
    "jax",
]

# Install Discovery from Git when you want a one-shot setup:
# pip install .[discovery]
# discovery = [
#   "discovery @ git+https://github.com/nanograv/discovery.git@main"
# ]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
addopts = "-v --tb=short"
